<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/button_margin"
    android:paddingLeft="@dimen/button_margin"
    android:paddingRight="@dimen/button_margin"
    android:paddingTop="@dimen/button_margin"
    tools:context="org.idodekov.unscramblethesentence.MainActivity"
    android:gravity="fill_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/chalkboard">
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:text="@string/app_name_underlined"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text="@string/playedLabel"
                        android:id="@+id/total" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text=""
                        android:gravity="end"
                        android:id="@+id/totalCount" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text="@string/passedLabel"
                        android:id="@+id/passed" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text=""
                        android:gravity="end"
                        android:id="@+id/passedCount" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text="@string/failedLabel"
                        android:id="@+id/failed" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text=""
                        android:gravity="end"
                        android:id="@+id/failedCount" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="top">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playButtonLabel"
            android:id="@+id/playButton"
            android:enabled="true"
            android:onClick="play"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/bottomAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_mainBottom">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
