<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.idodekov.unscramblethesentence.OverviewActivity"
    android:paddingBottom="@dimen/button_margin"
    android:paddingLeft="@dimen/button_margin"
    android:paddingRight="@dimen/button_margin"
    android:paddingTop="@dimen/button_margin"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/chalkboard">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=""
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/completionMessage"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text=""
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/completeSentence"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="top">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:id="@+id/nextButton"
            android:onClick="next"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeButton"
            android:id="@+id/finishButton"
            android:focusable="false"
            android:onClick="finish"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/bottomAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_overviewBottom">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
